[package]

name = "rustmc"
version = "0.0.1"
authors = [ "aa1ronham@gmail.com" ]

[[bin]]

name = "rustmc" # the name of the executable to generate

#[dependencies.sodiumoxide]
#git = "https://github.com/dnaq/sodiumoxide.git"

[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl"

[dependencies]
rand = "0.3"
rustc-serialize = "0.3"
getopts = "0.2"
term = "0.2"
